Made bug fixes for various distorted graphics Files modified - [MunicipalitySettings.html,MyProfile.html,MunicipalitySettings.css,Forms.css,ResetPassword.html,Forms.html,MyProfile.css]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -70,7 +70,7 @@
                                 <wm-gridrow name="gridrow6">
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn8"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn9" horizontalalign="center">
-                                        <wm-picture name="picture2" picturesource="bind:&quot;services/cx2/Municipalities/&quot;+pageParams.MunicipalityId+&quot;/content/logo&quot;" width="100pt" height="100pt"></wm-picture>
+                                        <wm-picture name="picture2" picturesource="bind:&quot;services/cx2/Municipalities/&quot;+pageParams.MunicipalityId+&quot;/content/logo&quot;" class="muni-logo"></wm-picture>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="4" name="gridcolumn14"></wm-gridcolumn>
                                 </wm-gridrow>
