--- a/src/main/webapp/pages/ResetPassword/ResetPassword.html
+++ b/src/main/webapp/pages/ResetPassword/ResetPassword.html
@@ -3,16 +3,14 @@
         <wm-page-content columnwidth="12" name="page_content1">
             <wm-layoutgrid name="layoutgrid1">
                 <wm-gridrow name="gridrow3" padding="2em unset">
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn7"></wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn8" horizontalalign="center">
-                        <wm-picture name="picture1" width="250px" height="170px" picturesource="resources/images/logos/CX-Logo.png"></wm-picture>
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn8" horizontalalign="center">
+                        <wm-picture name="picture1" picturesource="resources/images/logos/CX-Logo.png" class="cx-logo" width="197px" height="100px"></wm-picture>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn9"></wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow8">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn20">
-                        <wm-form errormessage="" captionposition="top" title="Reset Password" enctype="application/x-www-form-urlencoded" method="get" dataset="resetPassword" captionalign="left" name="form1" on-beforesubmit="form1Beforesubmit($event, $scope, $data)" show="bind:Variables.ValidateToken.dataSet.value === 1"
-                        on-result="form1Result($event, $scope, $data)" postmessage="Password updated successfully" iconclass="wi wi-vpn-key">
+                        <wm-form errormessage="" captionposition="top" title="Reset Password" enctype="application/x-www-form-urlencoded" method="get" dataset="resetPassword" captionalign="left" name="form1" on-beforesubmit="form1Beforesubmit($event, $scope, $data)"
+                        show="bind:Variables.ValidateToken.dataSet.value === 1" on-result="form1Result($event, $scope, $data)" postmessage="Password updated successfully" iconclass="wi wi-vpn-key">
                             <wm-layoutgrid columns="1" name="layoutgrid2">
                                 <wm-gridrow name="gridrow6">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn10">
@@ -28,8 +26,8 @@
                                 </wm-gridrow>
                                 <wm-gridrow name="gridrow10">
                                     <wm-gridcolumn columnwidth="12" name="gridcolumn24">
-                                        <wm-form-field name="retypePassword" displayname="Confirm Password" widget="text" show="true" type="custom" placeholder="Enter Password" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}" required="required" inputtype="password"
-                                        key="retypePassword"></wm-form-field>
+                                        <wm-form-field name="retypePassword" displayname="Confirm Password" widget="text" show="true" type="custom" placeholder="Enter Password" regexp="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[$@$!%*?&amp;])[A-Za-z\d$@$!%*?&amp;]{8,}"
+                                        required="required" inputtype="password" key="retypePassword"></wm-form-field>
                                     </wm-gridcolumn>
                                 </wm-gridrow>
                             </wm-layoutgrid>
