- Creation of forms (under fishers currently) should now work properly - Modified binding for logo on Forms page and the user icon so that we do not get a 404 error while loading. - Updated the forms page to require less pageVariables, as we should be getting data from the database rather than letting the client demand how the formGuids and such things are tied together. Files modified - [Main.variables.json,pages-config.json,FormController.java,Main.js,FormService.java,Forms.variables.json,topnav.html,Forms.html,Forms.js]

--- a/src/main/webapp/pages/topnav/topnav.html
+++ b/src/main/webapp/pages/topnav/topnav.html
@@ -7,7 +7,8 @@
             </wm-nav-item>
             <wm-nav-item name="nav_item5">
                 <wm-gridcolumn columnwidth="3" name="gridcolumn1" horizontalalign="right">
-                    <wm-picture name="picture1" width="30pt" height="30pt" shape="circle" margin="2pt unset" picturesource="bind:&quot;services/cx2/Users/&quot;+Variables.CurrentUserDetails.dataSet.id+&quot;/content/photo&quot;" on-click="Variables.goToPage_MyProfile.invoke()"></wm-picture>
+                    <wm-picture name="picture1" width="30pt" height="30pt" shape="circle" margin="2pt unset" picturesource="bind:!!Variables.CurrentUserDetails.dataSet.id ? &quot;services/cx2/Users/&quot;+Variables.CurrentUserDetails.dataSet.id+&quot;/content/photo&quot; : &quot;&quot;"
+                    on-click="Variables.goToPage_MyProfile.invoke()"></wm-picture>
                 </wm-gridcolumn>
                 <wm-gridcolumn columnwidth="9" name="gridcolumn1" horizontalalign="center">
                     <wm-anchor name="anchor5" iconclass="" caption="My Profile" on-click="Variables.goToPage_MyProfile.invoke()" iconposition="left"></wm-anchor>
