Corrected form name binding on forms page Files modified - [Forms.variables.json,Forms.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -78,7 +78,7 @@
                                 <wm-gridrow name="gridrow7">
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn10"></wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="8" name="gridcolumn11" horizontalalign="center">
-                                        <wm-label padding="unset 0.5em" name="label7" class="h1" caption="bind:pageParams.FormName"></wm-label>
+                                        <wm-label padding="unset 0.5em" name="label7" class="h1" caption="bind:Variables.lvFormType.dataSet.data[$i].formType"></wm-label>
                                     </wm-gridcolumn>
                                     <wm-gridcolumn columnwidth="2" name="gridcolumn15"></wm-gridcolumn>
                                 </wm-gridrow>
