- Added Basement fee fields for form designs - New form designs will now be created with active and internal municipality form both marked as false. Files modified - [FormTypes.java,cx2_published_dataModel.json,ManageForms.variables.json,FormController.java,FormService.java,servicedef.xml,EditForm.html,EditForm.variables.json]

--- a/src/main/webapp/pages/EditForm/EditForm.html
+++ b/src/main/webapp/pages/EditForm/EditForm.html
@@ -86,6 +86,16 @@
                                                                 maxchars="255" inputtype="text" placeholder="Enter value" defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].stateFeeAccountingCode"></wm-form-field>
                                                             </wm-gridcolumn>
                                                         </wm-gridrow>
+                                                        <wm-gridrow name="gridrow41_1">
+                                                            <wm-gridcolumn columnwidth="6" name="gridcolumn66">
+                                                                <wm-form-field displayname="Basement Fee" widget="text" show="true" type="custom" name="basementFee" defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].basementFee" placeholder="Enter value"
+                                                                maxchars="255"></wm-form-field>
+                                                            </wm-gridcolumn>
+                                                            <wm-gridcolumn columnwidth="6" name="gridcolumn67">
+                                                                <wm-form-field displayname="Basement Fee Accounting Code" widget="text" show="true" type="custom" name="basementFeeAccountingCode" defaultvalue="bind:Variables.ReadFormType.dataSet.data[$i].basementFeeAccountingCode"
+                                                                placeholder="Enter value" maxchars="255"></wm-form-field>
+                                                            </wm-gridcolumn>
+                                                        </wm-gridrow>
                                                     </wm-layoutgrid>
                                                 </wm-panel>
                                             </wm-gridcolumn>
