--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -12,16 +12,22 @@
                 </wm-gridrow>
                 <wm-gridrow name="gridrow2">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn3">
-                        <wm-panel iconclass="" autoclose="outsideClick" name="panelFormStatus" title="Form Status" class="panel-primary" accessroles="Everyone">
-                            <wm-livelist listclass="list-group" itemclass="list-group-item" template="true" itemsperrow="xs-1 sm-1 md-6 lg-6" class="media-list livelist-status" dataset="bind:Variables.FormStatus.dataSet" navigation="None" name="livelistStatus"
-                            pagesize="4" selectfirstitem="false" orderby="sortOrder:asc" loadingdatamsg="" nodatamessage="No Status found" disableitem="true" enablereorder="false" show="true">
-                                <wm-listtemplate layout="inline" name="listtemplate1">
-                                    <wm-container class="media-body" padding="unset unset unset 1.25em" name="container2">
-                                        <wm-label name="Name" caption="bind:Variables.FormStatus.dataSet.data[$i].status" fontsize="1.143" fontunit="em" width="auto"></wm-label>
-                                    </wm-container>
-                                </wm-listtemplate>
-                            </wm-livelist>
-                        </wm-panel>
+                        <wm-layoutgrid name="layoutgrid5">
+                            <wm-gridrow name="gridrow14">
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn24_1"></wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn28" horizontalalign="center">
+                                    <wm-label padding="unset 0.5em" name="labelFormStatus" caption="bind:'Status: '+defaultObjectForSelectStatus.status" hint="bind:defaultObjectForSelectStatus.description" class="h3"></wm-label>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="4" name="gridcolumn25"></wm-gridcolumn>
+                            </wm-gridrow>
+                            <wm-gridrow name="gridrow15">
+                                <wm-gridcolumn columnwidth="2" name="gridcolumn29"></wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="8" name="gridcolumn26" horizontalalign="center">
+                                    <wm-progress name="progressStatus" datavalue="bind:currentProgress" type="success" captionplacement="inside"></wm-progress>
+                                </wm-gridcolumn>
+                                <wm-gridcolumn columnwidth="2" name="gridcolumn30"></wm-gridcolumn>
+                            </wm-gridrow>
+                        </wm-layoutgrid>
                     </wm-gridcolumn>
                 </wm-gridrow>
                 <wm-gridrow name="gridrow3">
